[workspace]
members = ["src/*", "examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
publish = false

[workspace.lints.clippy]
pedantic = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
range_plus_one = "allow"

[workspace.dependencies]
olympus-spanned = { path = "src/olympus-spanned" }
olympus-lexer = { path = "src/olympus-lexer" }
olympus-parser = { path = "src/olympus-parser" }
olympus-verifier = { path = "src/olympus-verifier" }
olympus-net-common = { path = "src/olympus-net-common" }
olympus-client = { path = "src/olympus-client" }
olympus-server = { path = "src/olympus-server" }

ariadne = "0.4"
unicode-segmentation = "1.11"
