[workspace]
members = ["src/*", "examples/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.0"
publish = false

[workspace.lints.clippy]
pedantic = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
range_plus_one = "allow"
struct_field_names = "allow"

[workspace.dependencies]
olympus-spanned = { path = "src/olympus-spanned" }
olympus-lexer = { path = "src/olympus-lexer" }
olympus-parser = { path = "src/olympus-parser" }
olympus-verifier = { path = "src/olympus-verifier" }
olympus-net-common = { path = "src/olympus-net-common" }
olympus-client = { path = "src/olympus-client" }
olympus-server = { path = "src/olympus-server" }

async-trait = "0.1"
ariadne = "0.4"
clap = "4.5"
color-eyre = "0.6"
eyre = "0.6"
futures = "0.3"
heck = "0.5"
lid = { version = "0.3", default-features = false }
lz4_flex = "0.11"
paste = "1"
rand = "0.8"
residua-zigzag = "0.1"
tokio = "1.36"
tokio-util = "0.7.10"
unicode-segmentation = "1.11"
