[package]
name = "olympus-client"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
eyre = "0.6.12"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
olympus-net-common.workspace = true

[lints]
workspace = true
