[package]
name = "olympus-client"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
olympus-net-common.workspace = true

async-trait.workspace = true
futures.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }

[lints]
workspace = true
