[package]
name = "olympus-compiler"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
olympus-common.workspace = true
olympus-lexer.workspace = true
olympus-parser.workspace = true
olympus-verifier.workspace = true

ariadne.workspace = true
clap = { version = "4.5.3", features = ["derive"] }
eyre = "0.6.12"
color-eyre = "0.6.3"

[lints]
workspace = true
