[package]
name = "olympus-compiler"
edition.workspace = true
version.workspace = true
publish.workspace = true

[[bin]]
name = "olympusc"
path = "src/main.rs"

[dependencies]
olympus-spanned.workspace = true
olympus-lexer.workspace = true
olympus-parser.workspace = true
olympus-verifier.workspace = true

ariadne.workspace = true
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
color-eyre.workspace = true

[lints]
workspace = true
