[package]
name = "olympus-net-common"
edition.workspace = true
version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5"
paste = "1"
tokio-util = { version = "0.7", features = ["codec"] }
residua-zigzag = "0.1"
lz4_flex = "0.11.2"

[lints]
workspace = true
