[package]
name = "olympus-net-common"
edition.workspace = true
version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1"
tokio-util = { version = "0.7", features = ["codec"] }
residua-zigzag = "0.1"
lz4_flex = "0.11.2"
eyre = "0.6.12"

[lints]
workspace = true
