[package]
name = "olympus-net-common"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
eyre.workspace = true
lz4_flex.workspace = true
paste.workspace = true
residua-zigzag.workspace = true
tokio-util = { workspace = true, features = ["codec"] }

[lints]
workspace = true
