[package]
name = "olympus-server-poc"
edition.workspace = true
version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
bytes = "1.5.0"
eyre = "0.6.12"
futures = "0.3.30"
lid = { version = "0.3.0", features = ["easy", "base62"], default-features = false }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[lints]
workspace = true
