[package]
name = "olympus-server"
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
async-trait = "0.1.77"
futures = "0.3.30"
lid = { version = "0.3.0", features = ["easy", "base62"], default-features = false }
paste = "1.0.14"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
olympus-net-common.workspace = true

[lints]
workspace = true
